新增特性：可配置网关的多个入口地址`acooly.openapi.gateways[0~n]`，如果不配置，则默认为:/gateway.do。例如配置：`acooly.openapi.gateways[0]=/a/b/gateway.x`

--- a/openapi-framework-assemble/src/main/resources/application-sdev.properties
+++ b/openapi-framework-assemble/src/main/resources/application-sdev.properties
@@ -107,3 +107,7 @@ acooly.openapi.apidoc.portal.logo=/portal/images/logo/logo-acooly-white.png
 # log
 
 
+# \u7F51\u5173\u5165\u53E3\u914D\u7F6E
+acooly.openapi.gateways[0]=/gateway1
+acooly.openapi.gateways[1]=/gateway2.html
+acooly.openapi.gateways[2]=/a/b/gateway.do
