--- a/openapi-framework-assemble/src/main/resources/application-sdev.properties
+++ b/openapi-framework-assemble/src/main/resources/application-sdev.properties
@@ -11,7 +11,7 @@ acooly.dubbo.provider.port=10001
 acooly.dubbo.owner=OpenApiFramework
 acooly.ofile.storageRoot=/var/log/webapps/openapi-test/media
 ## openapi mock\u5F00\u5173
-acooly.openapi.mock.enable=true
+#acooly.openapi.mock.enable=true
 ## \u65E5\u5FD7\u914D\u7F6E
 # [\u53EF\u9009] \u7F51\u5173\u6027\u80FD\u65E5\u5FD7\u5F00\u5173
 acooly.openapi.log.perf-log-enable=true
@@ -42,7 +42,7 @@ acooly.openapi.anonymous.access-key=anonymous
 acooly.openapi.anonymous.secret-key=anonymouanonymou
 acooly.openapi.anonymous.permissions.login=*:login
 # [\u53EF\u9009] \u7F51\u5173\u52A8\u6001\u767B\u5F55\u8BA4\u8BC1\u63A5\u53E3\uFF0C\u767B\u5F55\u8BA4\u8BC1\u903B\u8F91\u7531\u76EE\u6807\u9879\u76EE\u5B9E\u73B0com.acooly.openapi.framework.service.service.LoginApiService
-acooly.openapi.login.enable=true
+#acooly.openapi.login.enable=true
 # [\u53EF\u9009] \u6BCF\u6B21\u8BBF\u95EE\u662F\u5426\u52A8\u6001\u751F\u6210\u79D8\u94A5
 acooly.openapi.login.secret-key-dynamic=true
 ## \u5F02\u6B65\u901A\u77E5\u914D\u7F6E
@@ -108,6 +108,6 @@ acooly.openapi.apidoc.portal.logo=/portal/images/logo/logo-acooly-white.png
 
 
 # \u7F51\u5173\u5165\u53E3\u914D\u7F6E
-acooly.openapi.gateways[0]=/gateway1
-acooly.openapi.gateways[1]=/gateway2.html
-acooly.openapi.gateways[2]=/a/b/gateway.do
+#acooly.openapi.gateways[0]=/gateway1
+#acooly.openapi.gateways[1]=/gateway2.html
+#acooly.openapi.gateways[2]=/a/b/gateway.do
