--- a/openapi-framework-assemble/src/main/resources/application-sdev.properties
+++ b/openapi-framework-assemble/src/main/resources/application-sdev.properties
@@ -41,6 +41,7 @@ acooly.openapi.anonymous.enable=true
 acooly.openapi.anonymous.access-key=anonymous
 acooly.openapi.anonymous.secret-key=anonymouanonymou
 acooly.openapi.anonymous.permissions.login=*:login
+acooly.openapi.permi.script-enable=false
 # [\u53EF\u9009] \u7F51\u5173\u52A8\u6001\u767B\u5F55\u8BA4\u8BC1\u63A5\u53E3\uFF0C\u767B\u5F55\u8BA4\u8BC1\u903B\u8F91\u7531\u76EE\u6807\u9879\u76EE\u5B9E\u73B0com.acooly.openapi.framework.service.service.LoginApiService
 #acooly.openapi.login.enable=true
 # [\u53EF\u9009] \u6BCF\u6B21\u8BBF\u95EE\u662F\u5426\u52A8\u6001\u751F\u6210\u79D8\u94A5
