完善匿名登录的单元测试

--- a/openapi-framework-assemble/src/main/resources/application-sdev.properties
+++ b/openapi-framework-assemble/src/main/resources/application-sdev.properties
@@ -35,17 +35,22 @@ acooly.openapi.auth-info-cache.defaultTimeout=600000
 acooly.openapi.auth-info-cache.levelOneEnable=true
 # [\u53EF\u9009] \u4E00\u7EA7\u672C\u5730\u7F13\u5B58\u7F13\u5B58\u4FE1\u606F\u8FC7\u671F\u65F6\u95F4,\u5355\u4F4D\uFF1Ams,\u9ED8\u8BA410\u5206\u949F
 acooly.openapi.auth-info-cache.levelOneTimeout=600000
+
+# \u662F\u5426\u5F00\u542F\u5728\u540E\u53F0\u9488\u5BF9accessKey\u7684Ant\u6A21\u5F0F\u914D\u7F6E\u6743\u9650
+acooly.openapi.permi.script-enable=true
+
 ## \u52A8\u6001\u8BA4\u8BC1\u548C\u533F\u540D\u8BBF\u95EE\uFF08\u901A\u8FC7\u533F\u540D\u8EAB\u4EFD\u8BBF\u95EElogin\u63A5\u53E3\u52A8\u6001\u83B7\u53D6\u4F1A\u8BDD\u79D8\u94A5\uFF09
-# [\u53EF\u9009] \u7F51\u5173\u533F\u540D\u8BBF\u95EE\u914D\u7F6E\uFF0C\u9ED8\u8BA4\u5F00\u542F\uFF0C\u53EF\u8BBF\u95EE\u767B\u5F55(login)\u63A5\u53E3.
+# [\u53EF\u9009] \u7F51\u5173\u533F\u540D\u8BBF\u95EE\u914D\u7F6E\uFF0C\u9ED8\u8BA4\u5F00\u542F\uFF0C\u53EF\u8BBF\u95EE\u767B\u5F55(login)\u63A5\u53E3\uFF0C\u4EE5\u4E0B4\u4E2A\u53C2\u6570\u90FD\u9ED8\u8BA4\u53EF\u9009
 acooly.openapi.anonymous.enable=true
 acooly.openapi.anonymous.access-key=anonymous
 acooly.openapi.anonymous.secret-key=anonymouanonymou
 acooly.openapi.anonymous.permissions.login=*:login
-acooly.openapi.permi.script-enable=false
+# \u6CE8\u610F\uFF1A\u5982\u679C\u8981\u4F7F\u7528login+\u52A8\u6001\u5BC6\u7801\uFF0Clogin\u76F8\u5173\u53C2\u6570\u5FC5\u9009
 # [\u53EF\u9009] \u7F51\u5173\u52A8\u6001\u767B\u5F55\u8BA4\u8BC1\u63A5\u53E3\uFF0C\u767B\u5F55\u8BA4\u8BC1\u903B\u8F91\u7531\u76EE\u6807\u9879\u76EE\u5B9E\u73B0com.acooly.openapi.framework.service.service.LoginApiService
-#acooly.openapi.login.enable=true
+acooly.openapi.login.enable=true
 # [\u53EF\u9009] \u6BCF\u6B21\u8BBF\u95EE\u662F\u5426\u52A8\u6001\u751F\u6210\u79D8\u94A5
 acooly.openapi.login.secret-key-dynamic=true
+acooly.openapi.login.parent-access-key=test
 ## \u5F02\u6B65\u901A\u77E5\u914D\u7F6E
 # [\u53EF\u9009] \u662F\u5426\u542F\u52A8\u5F02\u6B65\u901A\u77E5
 acooly.openapi.notify.enable=true
