验证日志脱敏的集中模式，都OK

--- a/openapi-framework-assemble/src/main/resources/application-sdev.properties
+++ b/openapi-framework-assemble/src/main/resources/application-sdev.properties
@@ -21,11 +21,14 @@ acooly.openapi.log.mult-file-enable=false
 acooly.openapi.save-order=true
 ## \u65E5\u5FD7\u8131\u654F
 # [\u53EF\u9009] \u5F00\u5173
-acooly.openapi.log-safety=false
+acooly.openapi.log-safety=true
 # [\u53EF\u9009] \u9700\u8981\u9690\u85CF(\u4E0D\u6253\u5370)\u7684\u5B57\u6BB5\uFF0C\u591A\u4E2A\u9017\u53F7\u5206\u9694\u3002\u4F8B\u5982\uFF1Apassword,pswd
-acooly.openapi.log-safety-ignores=amount,name
+acooly.openapi.log-safety-ignores=amount,name,password,pswd
 # [\u53EF\u9009] \u9700\u8981Mask(\u9690\u85CF\u90E8\u5206\u6570\u636E)\u7684\u5B57\u6BB5\uFF0C\u591A\u4E2A\u9017\u53F7\u5206\u9694\u3002\u4F8B\u5982\uFF1AmobileNo,certNo
 acooly.openapi.log-safety-masks=payeeUserId,buyeryMobileNo,buyerCertNo
+acooly.openapi.log.safety-enable=true
+acooly.openapi.log.safety-ignores=amount,name,password,pswd
+acooly.openapi.log.safety-masks=payeeUserId,buyeryMobileNo,buyerCertNo
 ## \u7F13\u5B58\u914D\u7F6E
 # [\u53EF\u9009] \u7F13\u5B58\u603B\u5F00\u5173\uFF0C\u5982\u679C\u5F00\u542F\uFF0C\u81EA\u52A8\u542F\u52A8\u4E8C\u7EA7\u7F13\u5B58\uFF08redis\uFF09\u3002
 acooly.openapi.auth-info-cache.enable=true
@@ -35,7 +38,6 @@ acooly.openapi.auth-info-cache.defaultTimeout=600000
 acooly.openapi.auth-info-cache.levelOneEnable=true
 # [\u53EF\u9009] \u4E00\u7EA7\u672C\u5730\u7F13\u5B58\u7F13\u5B58\u4FE1\u606F\u8FC7\u671F\u65F6\u95F4,\u5355\u4F4D\uFF1Ams,\u9ED8\u8BA410\u5206\u949F
 acooly.openapi.auth-info-cache.levelOneTimeout=600000
-
 # \u662F\u5426\u5F00\u542F\u5728\u540E\u53F0\u9488\u5BF9accessKey\u7684Ant\u6A21\u5F0F\u914D\u7F6E\u6743\u9650
 acooly.openapi.permi.script-enable=true
 ## \u52A8\u6001\u8BA4\u8BC1\u548C\u533F\u540D\u8BBF\u95EE\uFF08\u901A\u8FC7\u533F\u540D\u8EAB\u4EFD\u8BBF\u95EElogin\u63A5\u53E3\u52A8\u6001\u83B7\u53D6\u4F1A\u8BDD\u79D8\u94A5\uFF09
@@ -111,8 +113,6 @@ acooly.openapi.apidoc.portal.copyright=@Copyright Acooly 2019
 ## [\u53EF\u9009] \u5F00\u53D1\u5E73\u53F0\u7F51\u7AD9logo
 acooly.openapi.apidoc.portal.logo=/portal/images/logo/logo-acooly-white.png
 # log
-
-
 # \u7F51\u5173\u5165\u53E3\u914D\u7F6E
 #acooly.openapi.gateways[0]=/gateway1
 #acooly.openapi.gateways[1]=/gateway2.html
