--- a/openapi-framework-demo/openapi-framework-demo-message/pom.xml
+++ b/openapi-framework-demo/openapi-framework-demo-message/pom.xml
@@ -16,6 +16,10 @@
             <groupId>com.acooly</groupId>
             <artifactId>openapi-framework-common-util</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.acooly</groupId>
+            <artifactId>acooly-common</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
