完成动态秘钥功能的拆分和优化

--- a/openapi-framework-assemble/src/main/resources/application-sdev.properties
+++ b/openapi-framework-assemble/src/main/resources/application-sdev.properties
@@ -117,3 +117,5 @@ acooly.openapi.apidoc.portal.logo=/portal/images/logo/logo-acooly-white.png
 #acooly.openapi.gateways[0]=/gateway1
 #acooly.openapi.gateways[1]=/gateway2.html
 #acooly.openapi.gateways[2]=/a/b/gateway.do
+
+acooly.framework.plugin.acooly-debug=true
