--- a/openapi-framework-assemble/src/main/resources/application.properties
+++ b/openapi-framework-assemble/src/main/resources/application.properties
@@ -96,3 +96,5 @@ acooly.openapi.rates[2].partner-id=2019089021212230001
 acooly.openapi.rates[2].method=queryUser
 acooly.openapi.rates[2].interval=1000
 acooly.openapi.rates[2].max-requests=10
+
+#acooly.framework.plugin.clipboard=true
